Update experience in GoTo. Fix header error

--- a/cv.cls
+++ b/cv.cls
@@ -80,18 +80,18 @@
 }
 
 \newcommand{\header}[3]{%
-\begin{tikzpicture}[remember picture,overlay]
-  \node [rectangle, fill=fillheader, anchor=north, minimum width=\paperwidth,
-  minimum height=30mm, yshift=8mm] (box) at (current page.north){};
-  \node [anchor=center] (name) at (box) {%
-  \fontsize{18pt}{36pt}\color{header}%
-  {\thinfont #1}{\bodyfont  #2}
-  };
-  \node [anchor=north] at (name.south) {%
-  \fontsize{14pt}{24pt}\color{header}%
-  \bodyfont\HUGE #3%
-  };
-\end{tikzpicture}
+  \begin{tikzpicture}[remember picture,overlay]
+    \node [rectangle, fill=fillheader, anchor=north, minimum width=\paperwidth,
+minimum height=30mm, yshift=8mm] (box) at (current page.north){};
+    \node [anchor=center] (name) at (box) {%
+      \fontsize{18pt}{36pt}\color{header}%
+      {\thinfont #1}{\bodyfont  #2}
+    };
+    \node [anchor=north] at (name.south) {%
+      \fontsize{14pt}{24pt}\color{header}%
+      {\bodyfont #3}
+    };
+  \end{tikzpicture}
 }
 
 \newcommand{\smallheader}[2]{%
@@ -168,7 +168,7 @@ minimum height=2cm, yshift=0.5mm] (box) at (current page.north){};
 \newcommand{\entry}[2]{
     \textbf{#1}\\
     {#2}\vspace{1.2\parsep}
-}\\
+}
 
 \newcommand{\entrynormal}[1]{\parbox[t]{13.5cm}{
 	\vspace{-1.5\parsep}
