--- a/cv.tex
+++ b/cv.tex
@@ -73,7 +73,7 @@
 \item Worked on Apache Flink proof-of-concepts. This includes building reusable code templates, setting up CI/CD, and automating alerting.
 \item Wrote scripts and pipelines to automate Kafka Connect administrative tasks.
 \item Converted Javascript codebase ($> $4000 files) to Typescript, improving codebase maintainability and reliability.
-\item Migrated browser tests from selenium to playwright, resulting in an improvement in end-to-end runtime by up to 5$\times$.
+\item Migrated browser tests from Selenium to Playwright, resulting in an improvement in end-to-end runtime by up to 5$\times$.
 \item Introduced tools such as OpenAPI client generation, redux toolkit and tailwind to reduce superfluous code, increase productivity and decrease bugs.
 \item Technologies: Kubernetes $\cdot$ TypeScript $\cdot$ ReactJS $\cdot$ Java $\cdot$ Python $\cdot$ JavaScript
 \end{itemize}
