capitalize more names

--- a/cv.tex
+++ b/cv.tex
@@ -74,7 +74,7 @@
 \item Wrote scripts and pipelines to automate Kafka Connect administrative tasks.
 \item Converted Javascript codebase ($> $4000 files) to Typescript, improving codebase maintainability and reliability.
 \item Migrated browser tests from Selenium to Playwright, resulting in an improvement in end-to-end runtime by up to 5$\times$.
-\item Introduced tools such as OpenAPI client generation, redux toolkit and tailwind to reduce superfluous code, increase productivity and decrease bugs.
+\item Introduced tools such as OpenAPI client generation, Redux Toolkit and Tailwind to reduce superfluous code, increase productivity and decrease bugs.
 \item Technologies: Kubernetes $\cdot$ TypeScript $\cdot$ ReactJS $\cdot$ Java $\cdot$ Python $\cdot$ JavaScript
 \end{itemize}
 }
