--- a/cv.tex
+++ b/cv.tex
@@ -62,21 +62,22 @@
 
 \section{experience}
 
-
 \entry
 {\href{https://gotofinancial.com/en}{Goto Financial}}
 {
-\role{\emph{Lead Software Engineer, Commerce Enablement -- \href{https://www.mokapos.com/en}{Moka POS}}}{Jun 2021 \to Now}
+\role{\emph{Lead Software Engineer, Commerce Enablement -- \href{https://www.mokapos.com/en}{Moka POS}}}{Jun 2021 \to Apr 2023}
 \begin{itemize}
-\item Managed a team of $\approx$10 engineers ranging from junior to lead engineers. The team is responsible for delivering features across multiple platforms (Backend, iOS, Android, and Web) for Commerce Enablement's flagship \href{https://www.mokapos.com/en}{\emph{Moka}} product.
-\item Oversaw the development of one of the most difficult projects (\emph{Bundle Package}) for \emph{Moka}. The feature was successfully launched after a six-month development period.
-\item Worked on Apache Flink proof-of-concepts. This includes building reusable code templates, setting up CI/CD, and automating alerting.
-\item Wrote scripts and pipelines to automate Kafka Connect administrative tasks.
+\item Managed a team of approximately 10 engineers, responsible for delivering features across multiple platforms (Backend, iOS, Android, and Web) for the flagship \emph{Moka} product of Commerce Enablement.
+\item Led the development of the challenging (\emph{Bundle Package}) project, which was successfully launched after a six-month development period.
+\item Led Apache Flink proof-of-concepts, creating reusable helm/code templates, setting up CI/CD, and automating alerting.
+\item Developed scripts and pipelines to automate Kafka Connect administrative tasks.
+\item Implemented new backend components in Spring Boot.
 \item Converted Javascript codebase ($> $4000 files) to Typescript, improving codebase maintainability and reliability.
-\item Migrated browser tests from Selenium to Playwright, resulting in an improvement in end-to-end runtime by up to 5$\times$.
+\item Improved codebase maintainability and reliability by converting backoffice Javascript codebase ($> $4000 files) to Typescript.
+\item Sped up end-to-end browser tests by up to 5$\times$ by migrating from Selenium to Playwright.
 \item Introduced tools such as OpenAPI client generation, Redux Toolkit and Tailwind to reduce superfluous code, increase productivity and decrease bugs.
-\item Technologies: Kubernetes $\cdot$ TypeScript $\cdot$ ReactJS $\cdot$ Java $\cdot$ Python $\cdot$ JavaScript
 \end{itemize}
+\techstack{Kubernetes}{Spring Boot}{Java}{TypeScript}{React}{Python}
 }
 
 \entry
@@ -84,13 +85,13 @@
 {
 \role{\emph{Senior Software Engineer, Careers}}{Apr 2019 \to Jun 2021}
 \begin{itemize}
-\item Full stack engineer working on \href{https://www.indeed.com/career}{\emph{Careers Explorer}} and \href{https://www.indeed.com/certifications/}{\emph{Certifications}}. \emph{Career Explorer} is the first large scale public facing node application at Indeed with over two million month views.
-\item Lead the frontend architecture design of \emph{Careers Explorer}.
-\item Built and launch \emph{Careers Explorer} together with a team of four engineers in three months. This includes various devops tasks (production/error monitoring, CDN integration, CI/CD pipelines).
-\item Coached both engineers within and outside of the team on various best practices ranging from API design, typescript and react development, backend best practices.
-\item Migrated \emph{Indeed Certifications} from legacy Django templates to React.
-\item Technologies: Next.js $\cdot$ TypeScript $\cdot$ ReactJS $\cdot$ Java $\cdot$ Python $\cdot$ JavaScript
+\item Spearheaded the architecture design of \href{https://www.indeed.com/career}{\emph{Careers Explorer}}. \emph{Career Explorer} is the first large scale public facing node application at Indeed with over two million monthly views.
+\item Collaborated with a team of four engineers to build and launch \emph{Careers Explorer} within three months, incorporating essential devops tasks such as production/error monitoring, CDN integration, and CI/CD pipelines.
+\item Coached engineers within and outside the team on API design, Typescript and React development, and backend best practices using Java Spring Boot.
+\item Migrated \href{https://www.indeed.com/certifications/}{\emph{Indeed Certifications}}, an incubator product, from legacy Django templates to a modern stack on React and Spring Boot.
+\item Developed and maintained Presto/Trino-based ETL pipelines to track conversion and A/B testing metrics, enabling data-driven decision-making.
 \end{itemize}
+\techstack{Spring Boot}{Java}{TypeScript}{Next.js}{Python}
 }
 
 % \pagebreak
@@ -102,17 +103,16 @@
 \vspace{-\belowdisplayshortskip}
 \role{\emph{Software Engineer, Data Platform}}{Jan 2017 \to Sep 2018}
 \begin{itemize}
-\item \emph{nuTonomy} was acquired by \emph{Delphi} (now \emph{Aptiv}) in \href{https://techcrunch.com/2017/10/24/delphi-buys-nutonomy-for-400-million-to-scale-and-deliver-autonomous-vehicles/}{Oct 2017 for USD\$400 million} and subsequently became part of \href{https://www.aptiv.com/solutions/autonomous-mobility}{\emph{Motional}}, a joint venture between \emph{Aptiv} and \emph{Hyundai}.
-\item Full stack developer (.NET Core/React) for shared services/mapping team.
-\item Built large scale docker-based compute orchestration infrastructure which is able to dynamically scaled to support and coordinate hundreds of machines on AWS. The platform is used to support ML training pipelines, generate autonomous driving footage, running large scale safety simulations and computing important metrics.
-\item Set up one-command deployment procedures for all backend microservices by leverage on AWS cloud services (Serverless, Terraform). Uptime is higher and less error prone as compared to SSH-based deployments used previously.
-\item Setup and maintain Hadoop cluster processing large amounts of data generated from vehicle logs (4GB per vehicle per min).
-\item Introduced and coached the software team on Typescript/React. New CRUD services are written in Typescript/React and old services are incrementally rewritten using Typescript.
-\item Built and pioneered various microservices using modern .NET core on linux. Established coding standards for all backend microservices used in the company.
-\item Set up company-wide authentication/authorization using Auth0.
-\item Implemented tiling based three.js mesh garbage collector which improved frame rates of annotated maps by 300\%.
-\item Technologies: Terraform $\cdot$ Amazon Web Services (AWS) $\cdot$ TypeScript $\cdot$ C\# $\cdot$ .NET Framework $\cdot$ ReactJS $\cdot$ Python $\cdot$ JavaScript
+\item Full stack developer (.NET Core/React) for data platform/mapping team at \href{https://en.wikipedia.org/wiki/NuTonomy}{\emph{nuTonomy}} which later \href{https://techcrunch.com/2017/10/24/delphi-buys-nutonomy-for-400-million-to-scale-and-deliver-autonomous-vehicles/}{became} part of \href{https://www.aptiv.com/solutions/autonomous-mobility}{\emph{Motional}}, a joint venture between \emph{Aptiv} and \emph{Hyundai}.
+\item Built a large-scale docker-based compute orchestration infrastructure capable of dynamically scaling to support and coordinate hundreds of machines on AWS. This platform supported ML training pipelines, autonomous driving footage generation, large-scale safety simulations, and computation of critical metrics.
+\item Developed one-command deployment procedures for all backend microservices using AWS cloud services (Serverless, Terraform), resulting in higher uptime and reduced errors compared to SSH-based deployments.
+\item Set up and maintained a Hadoop cluster for processing large amounts of data generated from vehicle logs (4GB per vehicle per minute).
+\item Introduced and coached the software team on TypeScript/React, leading to the development of new CRUD services and incremental rewriting of old services.
+\item Pioneered various microservices using modern .NET Core on Linux, establishing coding standards for all backend microservices within the company.
+\item Implemented company-wide authentication/authorization using Auth0.
+\item Optimized frame rates of annotated maps by 300\% through the implementation of a tiling-based garbage collector for three.js mesh.
 \end{itemize}
+\techstack{Terraform}{Amazon Web Services (AWS)}{.NET Core}{TypeScript}{React}{Python}
 }
 
 \entry
@@ -120,13 +120,13 @@
 {
 \role{\emph{Product Engineer, Government Digital Services (GDS)}}{Jan 2015 \to Jan 2017}
 \begin{itemize}
-\item Ruby on Rails/React.js developer for \href{https://www.businessgrants.gov.sg/}{\emph{Business Grant Portal (BGP)}} involving various government agencies.
-\item Re-engineered BGP's frontend/backend into a single-page application to provide a slicker user experience and interface.
-\item Established a unified architecture for \emph{BGP} to reduce application complexity, improve code reusability, reliability and performance.
-\item Mentored and coached the team, new hires and vendors on the latest open source technologies.
-\item Employed agile software development methodologies and techniques (scrum, test-driven development, pair programming) to deliver quality products with high business value.
-\item Technologies: Ruby on Rails $\cdot$ Ruby $\cdot$ ReactJS $\cdot$ JavaScript
+\item Developed Ruby on Rails/React.js web application for \href{https://www.businessgrants.gov.sg/}{\emph{Business Grant Portal (BGP)}}, collaborating with various government agencies.
+\item Re-engineered \emph{BGP}'s frontend/backend into a single-page application, significantly enhancing the user experience and interface.
+\item Established a unified architecture for \emph{BGP}, reducing application complexity and improving code reusability, reliability, and performance.
+\item Mentored and coached the team, new hires, and vendors on the latest open-source technologies.
+\item Utilized agile software development methodologies and techniques (scrum, test-driven development, pair programming) to deliver high-quality products with significant business value.
 \end{itemize}
+\techstack{Ruby on Rails}{Ruby}{React}{Javascript}
 }
 
 % \entry
@@ -156,7 +156,7 @@
 \role{\emph{1st Class Honours in Bachelor of Computing, Computer Science}}{Aug 2010 \to June 2014}
 \begin{itemize}
     \item Dissertation (Applied Cryptography) -- \href{https://github.com/clouddra/FYP---Key-Aggregation/blob/master/paper/paper.pdf}{\emph{Efficient Key Aggregation for Cloud Storage}}
-    \item Specialization in Information Security, focus area in Parallel Computing
+    % \item Specialization in Information Security, focus area in Parallel Computing
     \item Awarded Dean's List for 3 semesters
 \end{itemize}
 }
@@ -166,8 +166,10 @@
 %	Projects SECTION
 %----------------------------------------------------------------------------------------
 \section{publications}
-\entrysmall{\href{https://www.researchgate.net/publication/303902017_Practical_and_Scalable_Sharing_of_Encrypted_Data_in_Cloud_Storage_with_Key_Aggregation}{Practical and Scalable Sharing of Encrypted Data in Cloud Storage with Key Aggregation}}{\href{http://ihmmsec.org/}{IH\&MMSec 2016}}
-\entrysmall{\href{https://goo.gl/aFVeyy}{React Rails for Business Grants Portal}}{Medium}
+\begin{itemize}
+\item \entrysmall{\href{https://www.researchgate.net/publication/303902017_Practical_and_Scalable_Sharing_of_Encrypted_Data_in_Cloud_Storage_with_Key_Aggregation}{Practical and Scalable Sharing of Encrypted Data in Cloud Storage with Key Aggregation}}{\href{http://ihmmsec.org/}{IH\&MMSec 2016}}
+\item \entrysmall{\href{https://goo.gl/aFVeyy}{React Rails for Business Grants Portal}}{Medium}
+\end{itemize}
 
 %----------------------------------------------------------------------------------------
 %	CERTIFICATIONS
