remove repeated point

--- a/cv.tex
+++ b/cv.tex
@@ -68,12 +68,12 @@
 \role{\emph{Lead Software Engineer, Commerce Enablement -- \href{https://www.mokapos.com/en}{Moka POS}}}{Jun 2021 \to Apr 2023}
 \begin{itemize}
 \item Managed a team of approximately 10 engineers, responsible for delivering features across multiple platforms (Backend, iOS, Android, and Web) for the flagship \emph{Moka} product of Commerce Enablement.
+% bundle package, bundle modifier, custom discount
 \item Led the development of the challenging (\emph{Bundle Package}) project, which was successfully launched after a six-month development period.
 \item Led Apache Flink proof-of-concepts, creating reusable helm/code templates, setting up CI/CD, and automating alerting.
 \item Developed scripts and pipelines to automate Kafka Connect administrative tasks.
 \item Implemented new backend components in Spring Boot.
-\item Converted Javascript codebase ($> $4000 files) to Typescript, improving codebase maintainability and reliability.
-\item Improved codebase maintainability and reliability by converting backoffice Javascript codebase ($> $4000 files) to Typescript.
+\item Converted \emph{Backoffice} Javascript codebase ($> $4000 files) to Typescript, improving codebase maintainability and reliability.
 \item Sped up end-to-end browser tests by up to 5$\times$ by migrating from Selenium to Playwright.
 \item Introduced tools such as OpenAPI client generation, Redux Toolkit and Tailwind to reduce superfluous code, increase productivity and decrease bugs.
 \end{itemize}
