--- a/cv.tex
+++ b/cv.tex
@@ -64,7 +64,6 @@
 \end{infoitemize}
 \end{multicols}
 
-% \vspace{-2\parsep}
 \vspace{-1\parsep}
 
 %----------------------------------------------------------------------------------------
@@ -95,7 +94,7 @@
 % bundle package, bundle modifier, custom discount
 % code generation
 \item Led the development of the challenging (\emph{Bundle Package}) project, which was successfully launched after a six-month development period.
-\item Led Apache Flink proof-of-concepts, creating reusable helm/code templates, setting up CI/CD, and automating alerting.
+\item Spearheaded Apache Flink proof-of-concepts, creating reusable helm/code templates, setting up CI/CD, and automating alerting.
 \item Developed scripts and pipelines to automate Kafka Connect administrative tasks.
 \item Implemented new backend components in Spring Boot.
 \item Converted \emph{Backoffice} Javascript codebase ($> $4000 files) to Typescript, improving codebase maintainability and reliability.
