--- a/cv.tex
+++ b/cv.tex
@@ -70,7 +70,7 @@
 \item Managed a team of approximately 10 engineers, responsible for delivering features across multiple platforms (Backend, iOS, Android, and Web) for the flagship \emph{Moka} product of Commerce Enablement.
 % bundle package, bundle modifier, custom discount
 \item Led the development of the challenging (\emph{Bundle Package}) project, which was successfully launched after a six-month development period.
-\item Led Apache Flink proof-of-concepts, creating reusable helm/code templates, setting up CI/CD, and automating alerting.
+\item Spearheaded Apache Flink proof-of-concepts, creating reusable helm/code templates, setting up CI/CD, and automating alerting.
 \item Developed scripts and pipelines to automate Kafka Connect administrative tasks.
 \item Implemented new backend components in Spring Boot.
 \item Converted \emph{Backoffice} Javascript codebase ($> $4000 files) to Typescript, improving codebase maintainability and reliability.
